--- a/app/views/customers/_new_address_js.html.erb
+++ b/app/views/customers/_new_address_js.html.erb
@@ -6,6 +6,7 @@
     form.find('#' + field + '_name').val(address.name);
     form.find('#' + field + '_building_name').val(address.building_name);
     form.find('#' + field + '_address').val(address.address);
+    form.find('#' + field + '_full_address').val(address.label);
     form.find('#' + field + '_city').val(address.city);
     form.find('#' + field + '_state').val(address.state);
     form.find('#' + field + '_zip').val(address.zip);
