--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -114,3 +114,12 @@ table.dataTable tbody tr.selected {
 .label-help {
   font-size: small;
 }
+
+.pac-container {
+    /* put Google geocomplete list on top of Bootstrap modal */
+    z-index: 9999;
+}
+
+.address_search {
+  width: 100%;
+}
