--- a/app/views/customers/_common_addresses_panel.html.haml
+++ b/app/views/customers/_common_addresses_panel.html.haml
@@ -19,7 +19,7 @@
             = translate_helper(:is_mailing_address)
       %tbody
         - @customer.addresses.each do |address|
-          %tr{data: {address: address.to_json}}
+          %tr{data: {address: address.attributes.merge({label: address.address_text}).to_json}}
             - if is_editing
               %td
                 = button_tag :type => 'button', class: 'deleteCustomerAddress btn-danger' do 
