--- a/app/views/shared/google_maps/_google_map_api.html.erb
+++ b/app/views/shared/google_maps/_google_map_api.html.erb
@@ -1,1 +1,1 @@
-<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false" %>
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=places" %>
