--- a/app/views/users/new_user.html.erb
+++ b/app/views/users/new_user.html.erb
@@ -5,7 +5,7 @@
 <%= form_for @user, :url=>url_for(:action=>:create_user) do |f| %>
   <% if @user.errors.any? || @errors.any? %>
     <div id="error_explanation">
-      <h2>translate_helper("user_form_error_message", count: @user.errors.count)</h2>
+      <h2><%= translate_helper("user_form_error_message", count: @user.errors.count) %></h2>
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -15,6 +15,10 @@
       <% end %>
       </ul>
     </div>
+  <% end %>
+
+  <% if @is_user_deleted %>
+    <p><%= link_to translate_helper("restore_user_link_text"), restore_user_path(id: @user.try(:id)), :class=>'new-user action-bttn' %></p>
   <% end %>
 
   <fieldset>
