[#105676856]Fix translation key calling

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -11,7 +11,7 @@
 <%= form_for @address do |form| %>
   <% if @address.errors.any? %>
     <div id="error_explanation">
-      <h2>translate_helper("address_form_error_message", count: @address.errors.count)</h2>
+      <h2><%= translate_helper("address_form_error_message", count: @address.errors.count) %></h2>
       <ul>
       <% @address.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
