--- a/app/views/users/show_change_password.html.erb
+++ b/app/views/users/show_change_password.html.erb
@@ -5,7 +5,7 @@
 <% if current_user.errors.any? %>
   <div id="error_explanation">
     <h2>
-      <h2>translate_helper("user_form_error_message", count: current_user.errors.count)</h2>
+      <h2><%= translate_helper("user_form_error_message", count: current_user.errors.count) %></h2>
     </h2>
     <ul>
       <% current_user.errors.full_messages.each do |msg| %>
