[fixes#105792532] Display address_required error message when triggered

--- a/app/views/customers/_add_address_dialog.html.haml
+++ b/app/views/customers/_add_address_dialog.html.haml
@@ -12,7 +12,7 @@
       $(".address-form :input").removeAttr("disabled");
       $('.ui-dialog button').show();
       form.find('form')[0].reset();
-      form.find('.error').remove();
+      form.find('.error').html('');
     });
 
     $('#customerCommonAddressTable').on('click', '.deleteCustomerAddress', function(e) {
