--- a/app/views/providers/_new_address_dialog.html.erb
+++ b/app/views/providers/_new_address_dialog.html.erb
@@ -13,18 +13,7 @@
         $( $(this)[0].parentNode ).dialog( "close" );
         show_alert('Address was successfully created.', 'info');
       } else {
-        //failed to create an address
-        $(this).find('.error').html('');
-        for (var field in data) {
-          text_field = $('#' + data.prefix + "_" + field);
-          error_element_id = data.prefix + "_" + field + '_error';
-          error_message = field + " " + data[field] + "; ";
-          if ($("#" + error_element_id).length === 0) {
-            text_field.after('<span class="error" id="' + error_element_id + '">' + error_message + "</span>");
-            text_field.attr('data-error-element', "#" + error_element_id);
-          }
-          $("#" + error_element_id).html(error_message);
-        }
+        showAddressValidationErrors(this, data);
       }
     })
     
