--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -86,18 +86,7 @@
         populate_address_form(data.prefix, data);
         $("." + data.prefix + "_address_details").show();
       } else {
-        //failed to create an address
-        $(this).find('.error').html('');
-        for (var field in data) {
-          text_field = $('#' + data.prefix + "_" + field);
-          error_element_id = data.prefix + "_" + field + '_error';
-          error_message = field + " " + data[field] + "; ";
-          if ($("#" + error_element_id).length === 0) {
-            text_field.after('<span class="error" id="' + error_element_id + '">' + error_message + "</span>");
-            text_field.attr('data-error-element', "#" + error_element_id);
-          }
-          $("#" + error_element_id).html(error_message);
-        }
+        showAddressValidationErrors(this, data);
       }
     })
     
