[fixes#107857312] User now can directly update address form fields (except for the address geocoding field, this field is readonly in editing mode in order to avoid address change influence on trips) on trip form and customer form

--- a/app/views/addresses/_form_fields.html.erb
+++ b/app/views/addresses/_form_fields.html.erb
@@ -1,4 +1,5 @@
 <% defined?(prefix) ? prefix : prefix = "address"%>
+<% defined?(edit_mode) ? edit_mode : edit_mode = :new %>
 <%= form.hidden_field :address, class: 'address_text' %>
 <%= form.hidden_field :city, class: 'address_city' %>
 <%= form.hidden_field :state, class: 'address_state' %>
@@ -18,7 +19,11 @@
 
 <li class="selfclear full_address">
   <%= label_tag "#{prefix}_full_address", translate_helper("full_address_name") %>
-  <%= text_field_tag "#{prefix}_full_address", address.try(:address_text), class: 'address_search'  %>
+  <% if edit_mode == :edit %>
+    <%= address.try(:address_text) %>
+  <% else %>
+    <%= text_field_tag "#{prefix}_full_address", address.try(:address_text), class: 'address_search' %>
+  <% end  %>
 </li>
 
 <li class="selfclear">
