--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -53,7 +53,7 @@
 
 <%= render 'inactivate_dialog' if edit_mode == :show %>
 <%= render 'add_donation_dialog' if edit_mode == :edit || edit_mode == :new %>
-<%= render 'add_address_dialog' %>
+<%= render 'add_address_dialog', edit_mode: edit_mode %>
 
 <%= render 'shared/hide_invisible_form_fields_js', model_name: "customer", table_name: 'customers', provider_id:  current_provider.try(:id) %>
 <script>
