[#107857312] Capture address edits when editing in customer page

--- a/app/views/customers/_new_address_js.html.erb
+++ b/app/views/customers/_new_address_js.html.erb
@@ -27,6 +27,7 @@
         show_alert("<%= translate_helper(:same_address_exists_for_customer) %>");
       } else {
         matchRow.data('address', addressData);
+        matchRow.attr('data-address', encodedAddressData);
         matchRow.find('td.address_name').replaceWith("<td class='address_name'>" + addressData.name + '&nbsp;<a class="viewAddress" href="#">(Edit details)</a></td>');
       }
     } else {
