[#107857312] Populate customer address data whenever customer changed

--- a/app/views/trips/_customer.html.erb
+++ b/app/views/trips/_customer.html.erb
@@ -46,6 +46,7 @@
       $('#trip_mobility_id').val(customerData.mobility_id);
       $('#customer_private_notes').val(customerData.private_notes);
       $("#trip_pickup_address_id").val(customerData.address_id);
+      populate_address_form('pickup', customerData.address_data);
       $("#pickup_search_address").val(customerData.address);
       $("#trip_funding_source_id").val(customerData.default_funding_source_id);
       $("#trip_service_level").val(customerData.default_service_level);
