--- a/app/views/trips/_row.html.erb
+++ b/app/views/trips/_row.html.erb
@@ -43,7 +43,11 @@
     <%= trip.dropoff_address.try :address_text %>
   </td>
   <td>
-    <%= format_time_for_listing trip.appointment_time %>
+    <% if trip.appointment_time.try(:to_date) != trip.pickup_time.try(:to_date) %>
+      <%= format_simple_full_datetime trip.appointment_time %>
+    <% else %>
+      <%= format_time_for_listing trip.appointment_time %>
+    <% end %>
   </td>
   <td>
     <% if trip.run.present? %>
