--- a/app/views/trips_runs/_trip_row.html.erb
+++ b/app/views/trips_runs/_trip_row.html.erb
@@ -9,7 +9,11 @@
     <%= format_time_for_listing trip.pickup_time %>
   </td>
   <td>
-    <%= format_time_for_listing trip.appointment_time %>
+    <% if trip.appointment_time.try(:to_date) != trip.pickup_time.try(:to_date) %>
+      <%= format_simple_full_datetime trip.appointment_time %>
+    <% else %>
+      <%= format_time_for_listing trip.appointment_time %>
+    <% end %>
   </td>
   <td>
     <%= link_to trip.customer.name, trip.customer, :title => translate_helper("view_customer_record_link_text") %>
