[#107857312] Load phone_number and trip_purpose data into address form when an address is selected

--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -24,6 +24,8 @@
     form.find('#' + field + '_zip').val(address.zip);
     form.find('#' + field + '_lat').val(address.lat);
     form.find('#' + field + '_lon').val(address.lon);
+    form.find('#' + field + '_phone_number').val(address.phone_number);
+    form.find('#' + field + '_trip_purpose_id').val(address.trip_purpose_id);
     var in_district = [true, false].indexOf(address.in_district) >= 0 ? address.in_district.toString() : '';
     form.find('#' + field + '_in_district').val(in_district);
     form.find('#' + field + '_notes').val(address.notes);
@@ -63,6 +65,11 @@
     $(search_field).val(address.label);
     $(search_field).attr("data-original-value", address.label);
     $(search_field).attr("data-original-id", address.id);
+
+    if (field == 'dropoff') {
+      $("#dropoff_phone").val(address.phone_number);
+      $("#trip_trip_purpose_id").val(address.trip_purpose_id);
+    }
   }
 
   $(document).ready(function() {
@@ -81,8 +88,8 @@
         update_address_fields(data.prefix, data);      
 
         if (data.prefix == 'dropoff') {
-          if (data.phone_number) $("#dropoff_phone").val(data.phone_number);
-          if (data.trip_purpose) $("#trip_trip_purpose").val(data.trip_purpose);
+          $("#dropoff_phone").val(data.phone_number);
+          $("#trip_trip_purpose_id").val(data.trip_purpose_id);
         }
         
         $( $(this)[0].parentNode ).dialog( "close" );
