--- a/app/views/lookup_tables/show.html.haml
+++ b/app/views/lookup_tables/show.html.haml
@@ -1,3 +1,11 @@
+- if @item && @item.errors.any? 
+  %div#error_explanation
+    %h2
+      = translate_helper("lookup_table_error_message", count: @item.errors.count)
+    %ul
+      - @item.errors.full_messages.each do |msg|
+        %li
+          = msg 
 .col-sm-12
   = render partial: 'dropdown', locals: {tables: @lookup_tables, table: @lookup_table}
 .col-sm-12
