--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,5 +1,29 @@
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("document_form_new_heading") %></h1>
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: @parent.class.name.to_s.downcase.pluralize %>
+
+<div id="page-header" class="row">
+  <div class="col-sm-12 col-md-6">
+    <h1><%= translate_helper("document_form_new_heading") %></h1>
+  </div>
+  <div class="col-sm-12 col-md-6">
+    <% if can? :manage, @document %>
+      <div class="pull-right">
+        <button class="btn action-button" id="document_form_submit">
+          <%= translate_helper("save") %>
+        </button>
+        <%= link_to translate_helper("cancel"), @parent, class: "btn action-button" %>
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <%= render partial: "form" %>
+
+<%= javascript_tag do %>
+  $(document).ready(function(){
+    $("form.new_document .form-actions").hide();
+    
+    $("#document_form_submit").on("click", function(){
+      $("form.new_document").submit();
+    });
+  });
+<% end %>
