--- a/app/views/reports/age_and_ethnicity.html.erb
+++ b/app/views/reports/age_and_ethnicity.html.erb
@@ -6,7 +6,7 @@
     <fieldset class="select-month">
       <p>
         <%= f.date_select  :start_date, :order => [:month,:year] rescue nil%>
-        <%= f.submit translate_helper("report") %>
+        <%= f.submit translate_helper("show") %>
       </p>
     </fieldset>
   <% end %>
