--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -14,6 +14,12 @@
           - else
             %a{href: trip_path(@trip.return_trip) }
               = @trip.return_trip.id
+    - if @trip.provider && @trip.provider != current_provider
+      .form-group.col-sm-12
+        .col-sm-3
+          = label_tag :trip_provider, translate_helper("trip_provider")
+        .col-sm-9
+          = @trip.provider.try(:name)
     .form-group.col-sm-12
       .col-sm-3
         = f.label :pickup_time, translate_helper("pickup_time")
